<resources>
    <string name="app_name">Prajjawala</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recharge_payments">Recharge/Payments</string>
    <string name="maps">Maps</string>
    <string name="gas_leaks">Gas Leaks</string>
    <string name="usage_stats">Usage stats</string>
    <string name="communicate">Communicate</string>
    <string name="contact_dealer">Contact Dealer</string>
    <string name="contact_prajjwala_customer_care">Contact Prajjwala Customer care</string>
    <string name="subscription">Subscription</string>
    <string name="tampering">Tampering</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="model_r">Model-R</string>
    <string name="_0">0%</string>
    <string name="in_weight">In.wt :</string>
    <string name="_06_12_2020">06-12-2020</string>
    <string name="cr_weight">cr.wt :</string>
    <string name="em_weight">Em.wt :</string>
    <string name="usage">usage :</string>
    <string name="_14_20_kg">14.20 Kg</string>
    <string name="_15_30_kg">15.30 Kg</string>
    <string name="xxxx_xxxx_xxxx">XXXX XXXX XXXX</string>
    <string name="visit_us_at_www_prajjwala_com">Visit us at www.prajjwala.com</string>
    <string name="_0_120_kg">0.120 Kg</string>
    <string name="reshedule">Reshedule</string>
    <string name="delivery_date">Delivery Date :</string>
    <string name="you_dont_have_any_leak_recently">You dont have any leak Recently</string>
    <string name="gas_leak">Gas Leak</string>
    <string name="your_dealer_no">Your Dealer No</string>
    <string name="ph_no">ph.No :</string>
    <string name="v_1_0_0_1">V 1.0.0.1</string>
    <string name="enter_yout_email">Enter your email</string>
    <string name="enter_yout_password">Enter your password</string>

    <string name="i_forgot_my_password">I forgot my password</string>

    <string name="contact">Contact</string>
    <string name="prajjwala_customer_care">Prajjwala customer care</string>
    <string name="yyyyyyyyyy">yyyyyyyyyy</string>
    <string name="your_subscription">Your Subscription</string>
    <string name="ends_on">Ends on :</string>
    <string name="dd_mm_yy">DD-MM-YY</string>
    <string name="you_have_been_found_tampering_system">You have been Found Tampering System</string>
    <string name="your_recent_tampering_on">Your recent Tampering on</string>
    <string name="date_dd_mm_yy">Date : dd-mm-yy</string>
    <string name="time_5_00">Time : 5:00</string>
    <string name="your_fine_500">Your Fine : 500/-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_maps">Map</string>


    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_world">Hello world!</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>

    <string name="back">BACK</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions</string>
    <string name="title_activity_forgot_password">forgotPasswordActivity</string>
    <string-array name="array">
        <item>10/-</item>
        <item>20/-</item>
        <item>50/-</item>
        <item>100/-</item>
        <item>500/-</item>
    </string-array>


</resources>
