<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment5">

    <ImageView
        android:id="@+id/iv0"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@drawable/tampering"
        android:contentDescription="@string/app_name"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv0"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/tv32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/you_have_been_found_tampering_system"
            android:textColor="#f4f681"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>
        <TextView
            android:id="@+id/tv33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv32"
            android:layout_centerHorizontal="true"
            android:text="@string/your_recent_tampering_on"
            android:textColor="#f4f681"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>
        <TextView
            android:id="@+id/tv34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv33"
            android:layout_centerHorizontal="true"
            android:text="@string/date_dd_mm_yy"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>
        <TextView
            android:id="@+id/tv35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv34"
            android:text="@string/time_5_00"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>
        <TextView
            android:id="@+id/tv36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv35"
            android:text="@string/your_fine_500"
            android:textColor="#f80707"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv0"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/tampering"
        android:textColor="#f4f681"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:fontFamily="@font/basic"/>

</RelativeLayout>