<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment7">

    <ImageView
        android:id="@+id/iv5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@drawable/images"
        android:contentDescription="@string/app_name"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv5"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/tv56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tv52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv56"
            android:layout_marginTop="10dp"
            android:text="@string/prajjwala_customer_care"
            android:textColor="#f4f681"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>
        <TextView
            android:id="@+id/tv53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv52"
            android:layout_alignEnd="@+id/tv56"
            android:layout_alignRight="@+id/tv56"
            android:text="@string/ph_no"
            android:textColor="#f4f681"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>
        <TextView
            android:id="@+id/tv54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv53"
            android:layout_toEndOf="@+id/tv53"
            android:layout_alignBottom="@+id/tv53"
            android:text="@string/yyyyyyyyyy"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/contact"
        android:textColor="#f4f681"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:fontFamily="@font/basic"/>


</RelativeLayout>