<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment3">

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@drawable/fire"
        android:contentDescription="@string/app_name"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv1"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/tv30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/you_dont_have_any_leak_recently"
            android:textColor="#f4f681"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/basic"/>



    </RelativeLayout>

    <TextView
        android:id="@+id/tv31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/gas_leak"
        android:textColor="#f4f681"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:fontFamily="@font/basic"/>

</RelativeLayout>