<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:id="@+id/bigframe"
    android:background="@drawable/gradient_color">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/prajjawala"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_layout"
        android:layout_marginBottom="40dp"
        android:id="@+id/logo"/>


<LinearLayout
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical" >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" />




    <EditText
        android:id="@+id/username_login"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"

        android:backgroundTint="@color/white"/>




    <EditText
        android:id="@+id/password_login"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"

        android:backgroundTint="@color/white"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="10dp" >


        <CheckBox
            android:id="@+id/show_hide_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_pwd"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:buttonTint="@color/white"/>




    </LinearLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"

        android:padding="3dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>



</LinearLayout>
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
    android:padding="5dp"
        android:text="Forgot Password"
        android:textColor="@color/white"
        android:textSize="15sp"
        />







</RelativeLayout>

